--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="start">Start</string>
     <string name="getOut">Get Out</string>
     <string name="title_activity_login">Log in</string>
+    <string name="title_activity">Articles_POO</string>
     <string name="username">Username</string>
     <string name="prompt_password">Contraseña</string>
     <string name="action_login">Log in</string>
