--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,13 +19,7 @@
     <string name="adress">Dirección: </string>
     <string name="postal">Código postal</string>
     <string name="cardNum">Número de tarjeta</string>
-    <string name="newname">Nuevo nombre: </string>
-    <string name="newlastName">Nuevo apellido: </string>
-    <string name="newusername">Nuevo username</string>
-    <string name="newpasword">Nueva ontraseña: </string>
-    <string name="newadress">Nueva dirección: </string>
-    <string name="newpostal">Nuevo código postal</string>
-    <string name="newcardNum">Nuevo número de tarjeta</string>
+    <string name="before">Atrás</string>
     <string name="edit">Guardar cambios</string>
     <string name="editbtn">Editar artículos</string>
     <string name="deletebtn">Eliminar artículos</string>
